--- a/build.gradle
+++ b/build.gradle
@@ -35,6 +35,7 @@ repositories {
 dependencies {
     compileOnly fileTree(include: ['*.jar'], dir: 'libs')
     compileOnly("io.papermc.paper:paper-api:1.20.4-R0.1-SNAPSHOT")
+    implementation group: 'redis.clients', name: 'jedis', version: '5.2.0'
     annotationProcessor 'org.projectlombok:lombok:1.18.36'
 }
 
